--- a/TheControlTower/TheControlTower.csproj
+++ b/TheControlTower/TheControlTower.csproj
@@ -53,6 +53,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="FlightWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -64,6 +68,9 @@
     <Compile Include="events\ChangeRouteEvent.cs" />
     <Compile Include="events\LandEvent.cs" />
     <Compile Include="events\TakeOffEvent.cs" />
+    <Compile Include="FlightWindow.xaml.cs">
+      <DependentUpon>FlightWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
