--- a/TheControlTower/TheControlTower.csproj
+++ b/TheControlTower/TheControlTower.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -104,7 +105,21 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\img1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1200-upload-blog-d96-american-airlines-b757.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AIR-FRANCE.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OE-LNM-Austrian-Airlines-Boeing-737-600_PlanespottersNet_187279.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\No_image_available.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
