Application is finished

--- a/TheControlTower/TheControlTower.csproj
+++ b/TheControlTower/TheControlTower.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="sounds\PlaySound.cs" />
     <Page Include="FlightWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -66,7 +67,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="convertion\ConvertToImgSource.cs" />
     <Compile Include="events\ChangeRouteEvent.cs" />
     <Compile Include="events\LandEvent.cs" />
     <Compile Include="events\TakeOffEvent.cs" />
@@ -117,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\img4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\audio1.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
